@@ -1,0 +1,10 @@
+@SQ	SN:chr1	LN:8	M5:ea83e9cb5120302eb00d51abdee77521	AN:1
+@SQ	SN:2	LN:8	M5:ea83e9cb5120302eb00d51abdee77521	AN:chr2
+@SQ	SN:chrX	LN:8	M5:ea83e9cb5120302eb00d51abdee77521	AN:X
+@SQ	SN:Y	LN:8	M5:ea83e9cb5120302eb00d51abdee77521	AN:chrY
+@SQ	SN:M	LN:8	M5:ea83e9cb5120302eb00d51abdee77521	AN:chrM,chrMT,MT
+@SQ	SN:MT	LN:8	M5:ea83e9cb5120302eb00d51abdee77521	AN:chrMT,chrM,M
+@SQ	SN:chrM	LN:8	M5:ea83e9cb5120302eb00d51abdee77521	AN:M,chrMT,MT
+@SQ	SN:chrMT	LN:8	M5:ea83e9cb5120302eb00d51abdee77521	AN:MT,chrM,M
+@SQ	SN:m	LN:8	M5:ea83e9cb5120302eb00d51abdee77521	AN:chrm
+@SQ	SN:MM	LN:8	M5:ea83e9cb5120302eb00d51abdee77521	AN:chrMM
